--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   <title>Bootstrap demo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="body">
@@ -35,89 +35,15 @@
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           </div>
           <button class="btn" type="submit">
-            <img class="searchlogo" src="./search.svg" alt="">
+            <img class="searchlogo" src="../images/search.svg" alt="">
           </button>
           <div class="aclo">
-            <img class="accountlogo" src="./account.png" alt="">
+            <img class="accountlogo" src="../images/account.png" alt="">
           </div>
         </form>
       </div>
     </nav>
   </div>
-
-<!-- Css del -->
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  /* overflow: hidden; */
-}
-.copyright {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.foot {
-  background: url("background.svg");
-  color: white;
-  background-repeat: no-repeat;
-  height: 65vh;
-}
-
-.nav-link {
-  /* margin-top: 3vw; */
-  color: white !important;
-  margin-left: 30vw;
-  width: max-content;
-  gap: 15px;
-}
-
-.mys {
-  position: absolute;
-  right: 4%;
-}
-
-.wid {
-  width: 45vw;
-  height: 40vh;
-  position: absolute;
-  margin-top: 3rem;
-  /* right: 0%; */
-  margin-left: 20vw;
-}
-
-.links h5 {
-  width: max-content;
-  font-weight: 1000;
-  /* font-family: ; */
-}
-
-.py-4 {
-  margin-top: 4rem;
-  margin-left: 12%;
-  margin-right: 12%;
-}
-
-.border-top {
-  position: relative;
-  top: 20vh;
-}
-.twit {
-  display: flex;
-  align-items: center;
-  justify-items: center;
-}
-.h5 {
-  position: relative;
-  left: 2%;
-}
-
-.nav li a {
-  position: relative;
-  top: 5vh;
-}
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
