--- a/html/footer.html
+++ b/html/footer.html
@@ -7,43 +7,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/footer.css">
-    <title>Footer Section</title>
 </head>
-
 <body>
     <footer class="foot py-5">
         <div class="container">
-            <div class="row text-center text-md-start">
-                <!-- Follow Us Section -->
-                <div class="col-md-3 mb-4">
+            <div class="row">
+                <div class="col-md-3">
                     <h3>Follow Us</h3>
-                    <ul class="list-unstyled d-flex justify-content-center justify-content-md-start">
-                        <li class="me-3">
-                            <a href="#" aria-label="Twitter">
-                                <img src="../images/twitter.png" alt="Twitter" width="40" height="40">
-                            </a>
-                        </li>
-                        <li class="me-3">
-                            <a href="#" aria-label="Instagram">
-                                <img src="../images/insta.png" alt="Instagram" width="40" height="40">
-                            </a>
-                        </li>
-                        <li class="me-3">
-                            <a href="#" aria-label="YouTube">
-                                <img src="../images/youtube.png" alt="YouTube" width="40" height="40">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" aria-label="Gmail">
-                                <img src="../images/gmail.png" alt="Gmail" width="40" height="40">
-                            </a>
-                        </li>
+                    <ul class="list-unstyled d-flex">
+                        <li><a href="#"><img src="../images/twitter.png" alt="Twitter" width="50" height="50"></a></li>
+                        <li><a href="#"><img src="../images/insta.png" alt="Instagram" width="50" height="50"></a></li>
+                        <li><a href="#"><img src="../images/youtube.png" alt="YouTube" width="50" height="50"></a></li>
+                        <li><a href="#"><img src="../images/gmail.png" alt="Gmail" width="50" height="50"></a></li>
                     </ul>
                 </div>
-
-                <!-- Quick Links Section -->
-                <div class="col-md-3 mb-4 ">
-                    <h3>Quick Links</h3>
+                <div class="col-md-3">
+                    <h3 class="">Quick Links</h3>
                     <ul class="list-unstyled">
                         <li><a href="#">Feedback</a></li>
                         <li><a href="#">FAQs</a></li>
@@ -51,24 +30,21 @@
                         <li><a href="#">About Us</a></li>
                     </ul>
                 </div>
-
-                <!-- Mystic Odisha Section -->
-                <div class="col-md-6">
-                    <h1 class="text-center">MYSTIC ODISHA</h1>
-                    <img src="../images/footimg.svg" alt="Mystic Odisha" class="img-fluid mt-3">
+                <div class="col-md-6 text-center">
+                    <h1>MYSTIC ODISHA</h1>
+                    <img src="../images/footimg.svg" alt="Mystic Odisha" class="img-fluid">
                 </div>
             </div>
-
-            <!-- Footer Bottom -->
-            <div class="text-center py-3 border-top mt-4">
+            <div class="text-center py-3 border-top">
                 <p>© 2024 Company, Inc. All rights reserved.</p>
             </div>
         </div>
-    </footer>
-
+    </footer>    
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
 
 </html>
+
