--- a/html/footer.html
+++ b/html/footer.html
@@ -7,13 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=SUSE:wght@100..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <footer class="foot py-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <h3>Follow Us</h3>
+                    <h2>Follow us</h2>
                     <ul class="list-unstyled d-flex">
                         <li><a href="#"><img src="../images/twitter.png" alt="Twitter" width="50" height="50"></a></li>
                         <li><a href="#"><img src="../images/insta.png" alt="Instagram" width="50" height="50"></a></li>
@@ -22,16 +25,16 @@
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <h3 class="">Quick Links</h3>
-                    <ul class="list-unstyled">
-                        <li><a href="#">Feedback</a></li>
-                        <li><a href="#">FAQs</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">About Us</a></li>
+                    <h3 class="QL">Quick Links</h3>
+                    <ul class="list-unstyled" >
+                        <li ><a href="#"class="QL">Feedback</a></li>
+                        <li ><a href="#"class="QL">FAQs</a></li>
+                        <li ><a href="#"class="QL">Contact Us</a></li>
+                        <li ><a href="#"class="QL">About Us</a></li>
                     </ul>
                 </div>
                 <div class="col-md-6 text-center">
-                    <h1>MYSTIC ODISHA</h1>
+                    <h2 class="mys">MYSTIC ODISHA</h2>
                     <img src="../images/footimg.svg" alt="Mystic Odisha" class="img-fluid">
                 </div>
             </div>
