--- a/html/footer.html
+++ b/html/footer.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="text-center py-3 border-top">
-                <p>© 2024 Company, Inc. All rights reserved.</p>
+                <p>Copyright @ Reserved 2024</p>
             </div>
         </div>
     </footer>    
